<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2015 Google LLC. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary="@string/prefs_header_application_summary"
        android:title="@string/prefs_header_application" >
        <ListPreference
            android:defaultValue="@string/prefs_volume_default"
            android:dialogTitle="@string/prefs_volume_dialog_title"
            android:entries="@array/prefs_volume_names"
            android:entryValues="@array/prefs_volume_values"
            android:key="volume_target"
            android:summary="@string/prefs_volume_title_summary"
            android:title="@string/prefs_volume_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_app" >
        <EditTextPreference
            android:enabled="false"
            android:key="app_version"
            android:persistent="false"
            android:selectable="false"
            android:shouldDisableView="false"
            android:title="@string/version" />
    </PreferenceCategory>

</PreferenceScreen>
